layout/style/nsCSSPseudoElementList.h
@@ -91,3 +91,9 @@ CSS_PSEUDO_ELEMENT(placeholder, ":placeholder",
 CSS_PSEUDO_ELEMENT(mozColorSwatch, ":-moz-color-swatch",
                    CSS_PSEUDO_ELEMENT_SUPPORTS_STYLE_ATTRIBUTE |
                    CSS_PSEUDO_ELEMENT_SUPPORTS_USER_ACTION_STATE)
+// The root of the text value anonymous content inside an <input> or <textarea>.
+CSS_PSEUDO_ELEMENT(mozTextControlEditingRoot, ":-moz-text-control-editing-root",
+                   CSS_PSEUDO_ELEMENT_ENABLED_IN_UA_SHEETS)
+// The element that shows the autofill value.
+CSS_PSEUDO_ELEMENT(mozTextControlPreview, ":-moz-text-control-preview",
+                   CSS_PSEUDO_ELEMENT_ENABLED_IN_UA_SHEETS)
